set logging api back to v2, conv to java 1.8, added patch to force title change opengl, added input processor api, added transformers for lwjgl2, and work on mc applet alot